<resources>
    <string name="app_name">AndOpgave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="car_plate">Car Plate:</string>
    <string name="car_make">Car Brand:</string>
    <string name="bilm_rke">Bilmærke</string>
    <string name="nummer_plade">Nummer Plade</string>
    <string name="bil_model">Bil model</string>
    <string name="price">Price :</string>
    <string name="car_model">Car Model:</string>
    <string name="pris">Pris</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>