<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">


            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/car_make"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCardProductName"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/bilm_rke"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/car_plate"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tvCarCardInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nummer_plade"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9" />

            <TextView
                android:id="@+id/tvCardCategory"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/bil_model"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView119" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView119"
                app:layout_constraintStart_toStartOf="@+id/textView119"
                app:layout_constraintTop_toBottomOf="@+id/textView119" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/car_model"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/tvCardPrice"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:text="@string/pris"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11" />

            <Button
                android:id="@+id/btndelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.939" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>